user related progress to be done

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,7 @@
 spring.application.name=progress_tracker
 spring.data.mongodb.uri=mongodb://localhost:27017/progress-service
 server.port=1111
+
+batchModule.uri=http://BATCH-MANAGEMENT-SERVICE/batch/batch-id/employees/{batchId}
+batches.uri=http://BATCH-MANAGEMENT-SERVICE/batch/name/id
+
