--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,8 @@
 spring.application.name=progress_tracker
 spring.data.mongodb.uri=mongodb://localhost:27017/progress-service
 server.port=1111
+eureka.client.serviceUrl.defaultZone=http://172.18.5.20:8761/eureka
 
-batchModule.uri=http://BATCH-MANAGEMENT-SERVICE/batch/batch-id/employees/{batchId}
+batchModule.uri=http://BATCH-MANAGEMENT-SERVICE/batch
 batches.uri=http://BATCH-MANAGEMENT-SERVICE/batch/name/id
 
