--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,4 +4,5 @@ server.port=1111
 eureka.client.serviceUrl.defaultZone=http://172.18.5.20:8761/eureka
 
 batchModule.uri=http://BATCH-MANAGEMENT-SERVICE/batch
+learningPlanModule.url=http://LEARNING-PLAN-SERVICE/batch-course/view-dto/{batchId}
 
